--- a/arch/arm64/configs/alioth_defconfig
+++ b/arch/arm64/configs/alioth_defconfig
@@ -40,6 +40,7 @@ CONFIG_BLK_DEV_INITRD=y
 # CONFIG_SYSFS_SYSCALL is not set
 # CONFIG_FHANDLE is not set
 CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
 # CONFIG_RSEQ is not set
 CONFIG_EMBEDDED=y
 # CONFIG_COMPAT_BRK is not set
@@ -269,6 +270,7 @@ CONFIG_NET_ACT_SKBEDIT=y
 CONFIG_QRTR=y
 CONFIG_QRTR_SMD=y
 CONFIG_QRTR_MHI=y
+CONFIG_BPF_JIT=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_CAN=y
 CONFIG_CAN_MCP25XXFD=y
